--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <button id="computer">Computer</button>
     </div>
     <div class="game-grid">
-        <div class="row1-col1"></div>
-        <div class="row1-col2"></div>
-        <div class="row1-col3"></div>
-        <div class="row2-col1"></div>
-        <div class="row2-col2"></div>
-        <div class="row2-col3"></div>
-        <div class="row3-col1"></div>
-        <div class="row3-col2"></div>
-        <div class="row3-col3"></div>
+        <div id="0"></div>
+        <div id="1"></div>
+        <div id="2"></div>
+        <div id="3"></div>
+        <div id="4"></div>
+        <div id="5"></div>
+        <div id="6"></div>
+        <div id="7"></div>
+        <div id="8"></div>
     </div>
     <div class="reset-game">
         <button id="reset">Reset game</button>
