--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button id="multiplayer">Multiplayer</button>
         <button id="computer">Computer</button>
     </div>
+    <div class="result"></div>
     <div class="game-grid">
         <div id="0"></div>
         <div id="1"></div>
